# Devonika

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
devonika/: __init__.py
devonika/architect/: __init__.py  system_architect.py
devonika/cli/: main.py
devonika/core/: __init__.py  engine.py
devonika/debugger/: __init__.py  auto_debugger.py
devonika/executor/: __init__.py  task_executor.py
devonika/generator/: __init__.py  code_generator.py
devonika/intelligence/: __init__.py  llm_interface.py
devonika/manager/: __init__.py  project_manager.py
devonika/optimizer/: __init__.py  performance_optimizer.py
devonika/planner/: __init__.py  project_planner.py
devonika/researcher/: __init__.py  tech_researcher.py
devonika/system_prompts/: __init__.py  system_prompt_manager.py
devonika/system_prompts/components/: autonomous_mode.txt  capabilities.txt  communication_protocol.txt  context_management.txt  core_identity.txt  final_directives.txt  operating_principles.txt  success_metrics.txt
devonika/system_prompts/workflows/: phase1_discovery.txt  phase2_architecture.txt  phase3_implementation.txt  phase4_verification.txt  phase5_deployment.txt
devonika/tester/: __init__.py  test_runner.py
devonika/tools/: __init__.py  tool_manager.py
docs/: ARCHITECTURE.md  DEVONIKA_SYSTEM.md  GETTING_STARTED.md
examples/: config_autonomous.json  config_discovery.json  config_example.json  config_guided.json  simple_project.py
tests/: __init__.py  test_llm_integration.py  test_planner.py  test_system_prompts.py
