[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devonika"
version = "0.1.0"
description = "Full-fledged AI software engineer capable of building projects of any scale"
authors = [{name = "Fratua"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"

[tool.isort]
profile = "black"
line_length = 100
